// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render draw 1`] = `
<div
  className="textDisplay"
>
  Draw
</div>
`;

exports[`render oTurn 1`] = `
<div
  className="textDisplay"
>
  O's Turn
</div>
`;

exports[`render oWin 1`] = `
<div
  className="textDisplay"
>
  O is the Winner!
</div>
`;

exports[`render xFirst 1`] = `
<div
  className="textDisplay"
>
  X Goes First
</div>
`;

exports[`render xTurn 1`] = `
<div
  className="textDisplay"
>
  X's Turn
</div>
`;

exports[`render xWin 1`] = `
<div
  className="textDisplay"
>
  X is the Winner!
</div>
`;
